Made a lot of things for C language.
Commit and push only for backup security.
Pay attention not ready.

--- a/C/EasyRPC/Tests/Tests.vcxproj
+++ b/C/EasyRPC/Tests/Tests.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Helpers.h" />
     <ClInclude Include="test_all.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
