--- a/C/EasyRPC/Tests/Tests.vcxproj.filters
+++ b/C/EasyRPC/Tests/Tests.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="test_all.h">
       <Filter>Arquivos de Origem</Filter>
     </ClInclude>
+    <ClInclude Include="Helpers.h">
+      <Filter>Arquivos de Origem</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
