--- a/C/EasyRPC/Tests/Tests.vcxproj.filters
+++ b/C/EasyRPC/Tests/Tests.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Helpers.h">
       <Filter>Arquivos de Origem</Filter>
     </ClInclude>
+    <ClInclude Include="HelperBind.h">
+      <Filter>Arquivos de Origem</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
