--- a/C/EasyRPC/Tests/Tests.vcxproj
+++ b/C/EasyRPC/Tests/Tests.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HelperBind.h" />
     <ClInclude Include="Helpers.h" />
     <ClInclude Include="test_all.h" />
   </ItemGroup>
