--- a/C/EasyRPC/Tests/Tests.vcxproj.filters
+++ b/C/EasyRPC/Tests/Tests.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="HelperBind.h">
       <Filter>Arquivos de Origem</Filter>
     </ClInclude>
+    <ClInclude Include="test_wrap.h">
+      <Filter>Arquivos de Origem</Filter>
+    </ClInclude>
+    <ClInclude Include="HelperClientConnection.h">
+      <Filter>Arquivos de Origem</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
