--- a/C/EasyRPC/EasyRPC/EasyRPC.vcxproj.filters
+++ b/C/EasyRPC/EasyRPC/EasyRPC.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="Arquivos de Origem\server">
       <UniqueIdentifier>{d2269717-ef57-4dd2-839e-8ae74a6ddf1e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Arquivos de Origem\client">
+      <UniqueIdentifier>{8752b14e-e962-4a0a-9928-97497521c5dc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="tests.cpp">
@@ -29,7 +32,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="package_builders\build_package_from_client.h">
+    <ClInclude Include="package_builders\build_package_from_client_or_server.h">
       <Filter>Arquivos de Origem\package_builders</Filter>
     </ClInclude>
     <ClInclude Include="package_builders\build_package_to_client.h">
@@ -55,6 +58,15 @@
     </ClInclude>
     <ClInclude Include="entities\easy_rpc_package_return.h">
       <Filter>Arquivos de Origem\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="client\easy_rpc_client.h">
+      <Filter>Arquivos de Origem\client</Filter>
+    </ClInclude>
+    <ClInclude Include="client\easy_rpc_client_connection.h">
+      <Filter>Arquivos de Origem\client</Filter>
+    </ClInclude>
+    <ClInclude Include="client\easy_rpc_client_windows_tcp.h">
+      <Filter>Arquivos de Origem\client</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
