Added build client function.
Move build function to build server functions.
Refactored some functions.

--- a/C/FunctionsBuilder/FunctionsBuilder/CMakeLists.txt
+++ b/C/FunctionsBuilder/FunctionsBuilder/CMakeLists.txt
@@ -4,10 +4,11 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Adicione a origem ao executável deste projeto.
-add_executable (FunctionsBuilder "FunctionsBuilder.cpp" "FunctionsBuilder.h" "ParserFunction.h" "Trim.h" "BuildFunction.h" "TypeData.h")
+add_executable (FunctionsBuilder "FunctionsBuilder.cpp" "FunctionsBuilder.h" "ParserFunction.h" "Trim.h" "BuildServerFunctions.h" "TypeData.h" "BuildClientFunctions.h")
 
 #add_executable (TestCheckContent "../Tests/TestParserContent.cpp" "FunctionsBuilder.h" "ParserFunction.h" "Trim.h" "BuildFunction.h")
-add_executable (TestBuildFunction "../Tests/TestBuildFunction.cpp" "FunctionsBuilder.h" "ParserFunction.h" "Trim.h" "BuildFunction.h" "TypeData.h")
+#add_executable (TestBuildServerFunctions "../Tests/TestBuildServerFunctions.cpp" "FunctionsBuilder.h" "ParserFunction.h" "Trim.h" "BuildServerFunctions.h" "TypeData.h" )
+add_executable (TestBuildClientFunctions "../Tests/TestBuildClientFunctions.cpp" "FunctionsBuilder.h" "ParserFunction.h" "Trim.h" "BuildClientFunctions.h" "TypeData.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET FunctionsBuilder PROPERTY CXX_STANDARD 20)
