--- a/C/EasyRPC/Tests/Tests.vcxproj.filters
+++ b/C/EasyRPC/Tests/Tests.vcxproj.filters
@@ -35,5 +35,11 @@
     <ClInclude Include="HelperClientConnection.h">
       <Filter>Arquivos de Origem</Filter>
     </ClInclude>
+    <ClInclude Include="test_builded_client_function.h">
+      <Filter>Arquivos de Origem</Filter>
+    </ClInclude>
+    <ClInclude Include="easy_rpc_remote_client.h">
+      <Filter>Arquivos de Origem</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
