--- a/C/EasyRPC/Tests/Tests.vcxproj
+++ b/C/EasyRPC/Tests/Tests.vcxproj
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <ExternalIncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);D:\F\Rafael\GitHub\EasyRPC\C\EasyRPC\EasyRPC;D:\F\Rafael\GitHub\EmbeddedCleanArch\libdebug\libdebug;D:\F\Rafael\GitHub\EmbeddedCleanArch\libstream\libstream</ExternalIncludePath>
+    <ExternalIncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Users\pdi02\Documents\GitHub\EasyRPC\C\EasyRPC\EasyRPC;C:\Users\pdi02\Documents\GitHub\EmbeddedCleanArch\libdebug\libdebug;C:\Users\pdi02\Documents\GitHub\EmbeddedCleanArch\libstream\libstream</ExternalIncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
