--- a/C/EasyRPC/TestWindowsClient/TestWindowsClient/TestWindowsClient.vcxproj
+++ b/C/EasyRPC/TestWindowsClient/TestWindowsClient/TestWindowsClient.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{e140d81d-214a-4fed-a718-4d80e87af62f}</ProjectGuid>
-    <RootNamespace>EasyRPC</RootNamespace>
+    <ProjectGuid>{cabd71a4-a67e-48f5-b188-53d31fae83d4}</ProjectGuid>
+    <RootNamespace>TestWindowsClient</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <ExternalIncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Users\pdi02\Documents\GitHub\EmbeddedCleanArch\libstream\libstream</ExternalIncludePath>
+    <ExternalIncludePath>C:\Users\pdi02\Documents\GitHub\EasyRPC\C\EasyRPC\EasyRPC;C:\Users\pdi02\Documents\GitHub\EmbeddedCleanArch\libdebug\libdebug;C:\Users\pdi02\Documents\GitHub\EmbeddedCleanArch\libstream\libstream;$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -130,23 +130,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="tests.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="client\easy_rpc_client.h" />
-    <ClInclude Include="client\easy_rpc_client_connection.h" />
-    <ClInclude Include="client\easy_rpc_client_windows_tcp.h" />
-    <ClInclude Include="entities\data_info.h" />
-    <ClInclude Include="entities\easy_rpc_package.h" />
-    <ClInclude Include="entities\easy_rpc_package_base.h" />
-    <ClInclude Include="entities\easy_rpc_package_params.h" />
-    <ClInclude Include="entities\easy_rpc_package_return.h" />
-    <ClInclude Include="entities\type_data.h" />
-    <ClInclude Include="package_builders\build_package_from_client_or_server.h" />
-    <ClInclude Include="package_builders\build_package_to_client.h" />
-    <ClInclude Include="server\easy_rpc_bind.h" />
-    <ClInclude Include="server\easy_rpc_server.h" />
-    <ClInclude Include="server\easy_rpc_server_windows_tcp.h" />
+    <ClCompile Include="TestWindowsClient.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
