--- a/C/EasyRPC/Tests/Tests.vcxproj.filters
+++ b/C/EasyRPC/Tests/Tests.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="easy_rpc_remote_client.h">
       <Filter>Arquivos de Origem</Filter>
     </ClInclude>
+    <ClInclude Include="test_builded_server_function.h">
+      <Filter>Arquivos de Origem</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
